src/test/resources/invalid/05_include-without-path.fmx
<fmx:include>
  <main second="bibo" attr1="dodo" third="cecil">
  </main>
</fmx:include>